--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <h1 id='Projects'> PROJECTS </h1>
             <ul>
                 <li class="a_format">
+                    <a class="a_format" href="https://github.com/2Kbummer/Screen-Dimmer" target="_blank">
+                        <img class="a_format" alt="Project Screenshot" src="images/screen_dimmer.jpg"
+                        style="width: 8rem; height: 6rem;">
+                    </a>
                     <a class="a_format" href="https://github.com/2Kbummer/data-to-image" target="_blank">
                         <img class="a_format" alt="Project Screenshot" src="images/Data_image_bars.jpg"
                         style="width: 15rem; height: 6rem;">
@@ -34,16 +38,12 @@
                         <img class="a_format" alt="Project Screenshot" src="images/website.JPG"
                         style="width: 10rem; height: 6rem;">
                     </a>
-                    <a class="a_format" href="https://github.com/2Kbummer/snake-game" target="_blank">
-                        <img class="a_format" alt="Project Screenshot" src="images/snake-game.jpg"
-                        style="width: 6rem; height: 6rem;">
-                    </a>
                 </li>
             </ul>
             <div class="project-text">
-                <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Colored Gradient Images (Py)</a>
-                <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
-                <a class="project-text" href="https://github.com/2Kbummer/snake-game" target="_blank"> Snake Game (C++)</a>
+                <a class="project-text" href="https://github.com/2Kbummer/Screen-Dimmer" target="_blank"> ScreenDimmer: brightness control (Py)</a>
+                <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Gradient Images (Py)</a>
+                <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> Snake Game (C++)</a>
             </div><br><br><br>
         <h1 id="About"> WHO OR WHAT AM I ??? </h1>
             <p>
