--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="project-text">
                 <a class="project-text" href="https://github.com/2Kbummer/Screen-Dimmer" target="_blank"> ScreenDimmer: brightness control (Py)</a>
                 <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Gradient Images (Py)</a>
-                <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> Snake Game (C++)</a>
+                <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
             </div><br><br><br>
         <h1 id="About"> WHO OR WHAT AM I ??? </h1>
             <p>
