--- a/index.html
+++ b/index.html
@@ -30,28 +30,40 @@
                         <img class="a_format" alt="Project Screenshot" src="images/screen_dimmer.jpg"
                         style="width: 8rem; height: 6rem;">
                     </a>
+                </li>
+                <div class="project-text">
+                    <a class="project-text" href="https://github.com/2Kbummer/Screen-Dimmer" target="_blank"> ScreenDimmer: brightness control (Py)</a>
+                </div>
+
+                <li class="a_format">   
                     <a class="a_format" href="https://github.com/2Kbummer/data-to-image" target="_blank">
                         <img class="a_format" alt="Project Screenshot" src="images/Data_image_bars.jpg"
                         style="width: 15rem; height: 6rem;">
                     </a>
+                </li>
+                <div class="project-text">
+                    <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Gradient Images (Py)</a>
+                </div>
+
+                <li class="a_format">
                     <a class="a_format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
                         <img class="a_format" alt="Project Screenshot" src="images/website.JPG"
                         style="width: 10rem; height: 6rem;">
                     </a>
                 </li>
+                <div class="project-text">
+                    <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
+                </div>
+
             </ul>
-            <div class="project-text">
-                <a class="project-text" href="https://github.com/2Kbummer/Screen-Dimmer" target="_blank"> ScreenDimmer: brightness control (Py)</a>
-                <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Gradient Images (Py)</a>
-                <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
-            </div><br><br><br>
+            <br><br><br>
         <h1 id="About"> WHO OR WHAT AM I ??? </h1>
             <p>
                 Well first, I want to say that I love coding and science. I am a biologist with work experience
                 in molecular diagnostics, but I can't stop thinking about coding! Ever since I saw 
                 <a target="_blank" href="https://deepmind.com/alphago-korea"> Google's deep mind beat Lee Sedol at GO/baduk</a>,
-                I became facinated with A.I. and neural networks. I learned C++, web development, and now Python, and I love it!
-                I have barely touched the waters of programming, but I want to dive deep into machine
+                I became facinated with A.I. and neural networks. I learned C++, then web development, and then got
+                into Python, and I love it! I have barely touched the waters of programming, but I want to dive deep into machine
                 learning, even if its something that I do in my spare time 😁.
             </p><br><br><br>
         <h1 id="Contact"> CONTACT ME! </h1>
@@ -59,10 +71,6 @@
                 <li>
                     <a class="a_format" href="https://github.com/2Kbummer" target="_blank">
                         <img class="a_format" alt="github logo" src="images/github-logo-arm.png"
-                        style="width: 4rem; height: 4rem;">
-                    </a>
-                    <a class="a_format" href="https://www.linkedin.com/in/kevin-poncepalos/" target="_blank">
-                        <img class="a_format" alt="linkedin logo" src="images/linkdin-logo.jpg"
                         style="width: 4rem; height: 4rem;">
                     </a>
                     <a class="a_format" href="https://twitter.com/ai_kev" target="_blank">
