--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="css/portfolio_style.css">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <div>
@@ -31,9 +31,9 @@
                         style="width: 8rem; height: 6rem;">
                     </a>
                 </li>
-                <div class="project-text">
+                <li class="project-text">
                     <a class="project-text" href="https://github.com/2Kbummer/Screen-Dimmer" target="_blank"> ScreenDimmer: brightness control (Py)</a>
-                </div>
+                </li>
 
                 <li class="a_format">   
                     <a class="a_format" href="https://github.com/2Kbummer/data-to-image" target="_blank">
@@ -41,9 +41,9 @@
                         style="width: 15rem; height: 6rem;">
                     </a>
                 </li>
-                <div class="project-text">
+                <li class="project-text">
                     <a class="project-text" href="https://github.com/2Kbummer/data-to-image" target="_blank"> Data Sets as Gradient Images (Py)</a>
-                </div>
+                </li>
 
                 <li class="a_format">
                     <a class="a_format" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank">
@@ -51,9 +51,9 @@
                         style="width: 10rem; height: 6rem;">
                     </a>
                 </li>
-                <div class="project-text">
+                <li class="project-text">
                     <a class="project-text" href="https://github.com/kevin-poncepalos/kevin-poncepalos.github.io" target="_blank"> This Website</a>
-                </div>
+                </li>
 
             </ul>
             <br><br><br>
@@ -82,12 +82,12 @@
         <footer>
             <strong>
                 <a href="https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-repository-on-github/licensing-a-repository#searching-github-by-license-type">
-                    Copyright &copy; 2021 kevin-poncepalos. All rights reserved.
+                    Copyright &copy; Since 2021 kevin-poncepalos. All rights reserved.
                 </a>
             </strong>
             <div id="validator_box">
                 <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkevin-poncepalos.github.io%2F">
-                    <img src="images/HTML5_Logo_64.png" alt="Valid HTML 5" style="height:3rem; width:3rem;" />
+                    <img src="images/HTML5_Logo_64.png" alt="Valid HTML 5" style="height:3rem; width:3rem;">
                 </a>
             </div>
         </footer>
