--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Kevin's Portfolio
         </title>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="css/portfolio_style.css">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     </head>
