--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li class="a_format">
                     <a class="a_format" href="https://github.com/2Kbummer/Screen-Dimmer" target="_blank">
-                        <img class="a_format" alt="Project Screenshot" src="images/screen_dimmer.jpg"
+                        <img class="a_format" alt="Project Screenshot" src="images/screen_dimmer_preview.jpg"
                         style="width: 8rem; height: 6rem;">
                     </a>
                 </li>
